Bump up plugin versions